<resources>
    <string name="app_name">SunilMantraTest</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">MANTRA-MFS100-TEST</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="MatchISO">MATCH ISO</string>
    <string name="foorLoop">Init/Uninit</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="SyncCapture">CAPTURE</string>
    <string name="StopSyncCapture">STOP CAP</string>
    <string name="WriteBit">Write Bit</string>
    <string name="ReadBit">Read Bit</string>
    <string name="ChangeKey">Change Key</string>
    <string name="GetKey">Get Key</string>

    <string-array name="MFS100Ver">
        <item>41</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_preference">Preference</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registation">Registration</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="capturefingerprint">Capture Fingureprint</string>
    <string name="done">Done</string>
</resources>
