<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linfirstScreen"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:visibility="visible"
        android:padding="@dimen/margin_ten"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:text="@string/registation"
            android:onClick="onControlClicked"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:onClick="onControlClicked"
            android:text="@string/login"
            android:layout_height="match_parent" />

    </LinearLayout>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:text="Back"
            android:visibility="gone"
            android:onClick="onControlClicked"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layoutRegistration"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">


        <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_ten"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/enterUserName"/>

        <EditText
            android:id="@+id/edittextuserID"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:gravity=""
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="enter username here"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/margin_ten"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/capturefingerprint"/>

            <ImageView
                android:id="@+id/imgCaptureFinger"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:onClick="onControlClicked"
                android:background="@drawable/imagefinger"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/finger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_ten"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onControlClicked"
                android:layout_weight="1"
                android:text="@string/register" />
            <Button
                android:id="@+id/buttonLoginn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onControlClicked"
                android:layout_weight="1"
                android:text="@string/login" />


            <TextView
                android:id="@+id/lblMessage"
                style="@style/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/message"
                android:gravity="center"
                android:padding="5dp"
                android:text=""
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtEventLog"
                style="@style/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/message"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:text=""
                android:textSize="14dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
</ScrollView>
